syntax = "proto3";
package admin;
option go_package = "./admin_proto;admin_proto";
import "admin_api.proto";

// 权限列表
message PermissionListReq{}

message PermissionListResp{}

// 创建权限
message PermissionAddReq{}

message PermissionAddResp{}

//权限详情
message PermissionDetailReq{}

message PermissionDetailResp{}

// 编辑权限
message PermissionEditReq{}

message PermissionEditResp{}

// 启用禁用权限
message PermissionEnabledReq{}

message PermissionEnabledResp{}

// 删除权限
message PermissionDeleteReq{}

message PermissionDeleteResp{}

// 权限绑定接口
message PermissionApisBindReq{}

message PermissionApisBindResp{}

//指定菜单创建查看编辑删除权限
message PermissionBindMenuReq{}

message PermissionBindMenuResp{}

message PermissionApiItem{
  int32 id=1;//权限ID
  int32 menuId=2;//菜单ID
  string key=3;//权限键名
  string type=4;//权限类型
  string typeText=5;//权限类型
  string name=6;//权限名称
  repeated ApiItem apis=7;//接口列表
  bool enabled=8;//是否启用
  string describe=9;//权限描述
}